--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ifaet",
   "version": "1.0.0",
   "main": "index.js",
-  "start": "node index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
